[tool.poetry]
name = "benbucks-core"
version = "0.1.0"
description = "Core elements for the BenBucks currency"
authors = ["Ben Soyka <hello@bsoyka.me>"]
readme = "README.md"
packages = [{include = "benbucks_core"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"
