[tool.poetry]
authors = ["Ben Soyka <hello@bsoyka.me>"]
description = "Core elements for the BenBucks currency"
name = "benbucks-core"
packages = [{include = "benbucks_core"}]
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
beanie = "^1.16.6"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mongomock-motor = "^0.0.15"
pre-commit = "^2.21.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
profile = "black"
